tests/NormalTests/paczka1/small_fuzzy/37216033.err
Error in line 1: syhfT A34 11,6
Error in line 7: jWzkR S813 65,0
